<resources>
    <string name="app_name">DIGI_MOVE</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="mdp">mdp</string>
    <!--string name="default_web_client_id">121327465356-a4sta1cs4scf23k6au0q4qvcubc5pn77.apps.googleusercontent.com</string-->
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1909497705815152</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1909497705815152</string>
    <string name="textView_bienvenu">textView_bienvenu</string>
    <string name="deconnexion">deconnexion</string>
    <string name="title_activity_login">Create account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="mot_de_passe_oubli">mot de passe oublié ?</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">pseudo</string>
    <string name="nav_header_subtitle">voyage@digi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="prenom">prenom</string>
    <string name="numero_de_t_l_phone">numero de téléphone</string>
    <string name="adresse">adresse</string>
    <string name="nom">nom</string>
    <string name="sign_up">SIGN UP</string>
    <string name="tonga_soa">Tonga soa !</string>
    <string name="connect_with">Connect with</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="s_inscrire1">s\'inscrire</string>
    <string name="todofg">TODOdfh</string>
    <string name="pie_cake">check moi</string>
    <string name="communiquer">Communiquer</string>
    <string name="communicate">Communicate</string>
    <string name="reglage">Reglage</string>
    <string name="deconnexions">Deconnexions</string>
    <string name="desc">description</string>
    <string-array name="list_regions">
        <item>Tana</item>
        <item>Nosy be</item>
        <item>Diego</item>
    </string-array>

</resources>
