<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      >

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/itm_Organiser"
                android:icon="@drawable/ic_organiser"
                android:title="Organiser"/>
        <item
                android:id="@+id/itm_Planifier"
                android:icon="@drawable/ic_planifier"
                android:title="Planifier"/>
        <item
                android:id="@+id/itm_Messages"
                android:icon="@drawable/ic_message"
                android:title="Messages"/>
        <item
                android:id="@+id/itm_Groupes"
                android:icon="@drawable/ic_groupes"
                android:title="Groupes"/>
    </group>

    <item android:title="@string/communiquer">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Partager"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Envoyer"/>
        </menu>
    </item>
    <item android:title="@string/communicate">
    <menu>
        <item
                android:id="@+id/itm_Reglage"
                android:icon="@drawable/ic_reglages"
                android:title="@string/reglage"/>
        <item
                android:id="@+id/itm_deconnexion"
                android:icon="@drawable/ic_deconnexion"
                android:title="@string/deconnexions"/>
    </menu>
</item>

</menu>
