<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditionInfoActivity">
    <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/pDialog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView"
            android:visibility="visible"
            app:indicatorName="BallPulseIndicator"
            app:indicatorColor="@color/fui_buttonShadow"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_edit_red" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/nv_icon3"
            android:cropToPadding="true"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" tools:targetApi="o" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:src="@drawable/icon_profile"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:hint="@string/nom"
            android:textColorHint="#aaa"
            android:id="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/nv_icon3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_nom"
                android:textColor="#aaa"
                android:backgroundTint="#aaa"
                android:layout_marginTop="24dp" android:autofillHints="" tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="#aaa"
            app:hintAnimationEnabled="true"
            android:hint="@string/prenom" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2" android:id="@+id/textInputLayout3">
        <EditText
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="#aaa"
                android:backgroundTint="#aaa"
                android:ems="10"
                android:id="@+id/editText_prenom"
                android:layout_marginTop="24dp" android:autofillHints="" tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="#aaa"
            app:hintAnimationEnabled="true"
            android:hint="@string/numero_de_t_l_phone" app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3" android:id="@+id/textInputLayout4">
        <EditText
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="#aaa"
                android:backgroundTint="#aaa"
                android:ems="10"
                android:id="@+id/editText_phone"
                android:layout_marginTop="24dp" android:autofillHints="" tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="#aaa"
            app:hintAnimationEnabled="true"
            android:hint="@string/adresse" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4" android:id="@+id/textInputLayout5">
        <EditText
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#aaa"
                android:backgroundTint="#aaa"
                android:ems="10"
                android:id="@+id/editText_adresse"
                android:layout_marginTop="24dp" android:autofillHints="" tools:targetApi="o"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="Valider"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/textView_valider" app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:fontFamily="sans-serif-light"
            android:typeface="sans" android:textSize="24sp" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            android:background="@drawable/degrade_blck_clr" android:textColor="#aaa"/>

</androidx.constraintlayout.widget.ConstraintLayout>